<resources>
    <string name="app_name">BasicApplication</string>

    <!-- Welcome Fragment Values -->
    <string name="create_account_button">Create Account</string>
    <string name="account_exists_button">I already have an account</string>
    <string name="welcome">Welcome!</string>
    <string name="cancel_text">Cancel</string>
    <!-- Menu items titles -->

    <string name="home_navigation">Home</string>
    <string name="make_navigation">Make</string>
    <string name="profile_navigation">Profile</string>


    <!-- Sign in screen values -->
    <string name="forgot_password">Forgot login or password?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>


    <string name="password">Password</string>


    <string name="email_hint">Email<font fgcolor='#FFFF0000'>*</font></string>
    <string name="password_hint">Password<font fgcolor='#FFFF0000'>*</font></string>
    <string name="username_hint">User Name<font fgcolor='#FFFF0000'>*</font></string>
    <string name="birthday_hint">Birthday</string>
    <string name="confirm_password_hint">Confirm Password<font fgcolor='#FFFF0000'>*</font></string>

    <string name="back_button">Back</string>

    <string name="new_text">New</string>
    <string name="popular_text">Popular</string>
    <string name="bottom_navigation">bottom navigation</string>
    <string name="showing_post_photo">showing post photo</string>
    <string name="photo_avatar">photo avatar</string>
    <string name="settings">settings</string>
    <string name="logo">logo</string>


    <string name="username_in_use_error">Username is already in use</string>
    <string name="email_in_use_error">Email is already in use</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="personal_data">Personal Data</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="upload_photo">Upload photo</string>
    <string name="save">Save</string>
    <string name="old_password">Old password</string>
    <string name="you_can">You can</string>
    <string name="delete_your_account">delete your account</string>
    <string name="sign_out">Sign out</string>
    <string name="card_view">Card view</string>
    <string name="search">Search</string>

    <string name="incorrect_old_password">Invalid old password</string>

    <string name="password_changed">Password Changed successfully</string>
    <string name="user_info_changed">User information changed successfully</string>
    <string name="choose_picture_from_gallery">Choose picture from gallery</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="create_photo_success">New photo created successfully</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="change_photo">Change Photo</string>
    <string name="sorry">Sorry!</string>
    <string name="there_is_no_pictures">There is no pictures</string>
    <string name="please_come_back_later">Please come back later</string>

    <string name="upload_photo_error">Error when loading data, please retry</string>
    <string name="upload_photo_loading">Photo is loading</string>

    <string name="saving_error">Unable to save photo</string>

    <string name="avatar_upload_success">Avatar was uploaded successfully</string>
    <string name="avatar_upload_error">Could not upload the avatar</string>

    <string name="invalid_birthday">Birth date in wrong format, correct is yyyy-mm-dd</string>
    <string name="password_match_error">Passwords must match</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="password_length_error">Password should have at least 5 characters</string>
    <string name="invalid_username">Username is invalid</string>
    <string name="views">Views:</string>
    <string name="loaded">Loaded:</string>

</resources>