<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:iconTint="@color/grey"
        android:title="@string/home_navigation" />

    <item
        android:id="@+id/navigation_make"
        android:icon="@drawable/ic_camera"
        android:iconTint="@color/grey"
        android:title="@string/make_navigation" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:iconTint="@color/grey"
        android:title="@string/profile_navigation" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_favourite"
        android:iconTint="@color/grey"
        android:title="Saved">
    </item>

</menu>