<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:contentDescription="@string/back_button"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_chevron_left" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/saveButton"
                    style="@style/primaryTextButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:text="@string/add" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/image_background_color"
            android:contentDescription="@string/showing_post_photo"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/uploadImageButton"
            style="@style/outlinedButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outlined_button"
            android:padding="5dp"
            android:text="@string/upload_picture" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postNameLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/name"
                android:lines="1"
                android:maxLength="20"
                android:padding="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top"
                android:hint="@string/description"
                android:maxLength="140"
                android:paddingTop="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxNewTag"
                style="@style/checkBoxStyle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/new_text" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBoxPopularTag"
                style="@style/checkBoxStyle"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/popular_text" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
