<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancelButton"
            style="@style/secondaryTextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/cancel_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_pink" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:endIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="username"
                android:hint="@string/username_hint"
                android:maxLength="20"
                style="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdayLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0,1,2,3,4,5,6,7,8,9,-"
                android:hint="@string/birthday_hint"
                android:inputType="date"
                style="@style/editTextStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                style="@style/editTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:passwordToggleDrawable="@drawable/visibility_toggle"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                style="@style/editTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:passwordToggleDrawable="@drawable/visibility_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                style="@style/editTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_button"
            android:text="@string/signup"
            style="@style/filledButtonStyle"
            android:textSize="17sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signIn"
            android:layout_width="103dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>