<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign_in.SignInFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="313dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_regular"
            android:minHeight="48dp"
            android:text="@string/cancel_text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002" />

        <View
            android:id="@+id/delimiter_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelButton"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delimiter_top"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_grey"
            android:backgroundTint="@color/dark_pink"
            app:layout_constraintBottom_toTopOf="@+id/emailLayout"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="57dp"
            app:endIconDrawable="@drawable/ic_mail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                style="@style/outlinedTextFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="0dp"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInPasswordLayout"
            style="@style/outlinedTextFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleDrawable="@drawable/visibility_toggle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:autofillHints="password"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInPasswordLayout"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="79dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInPasswordLayout"
            app:layout_constraintVertical_bias="0.002" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="104dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/signInButton"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            tools:ignore="TextSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>